--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="./favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&display=swap"
     rel="stylesheet" />
-  <title>React App</title>
+  <link rel="stylesheet" href="./initialize-styles.css">
+
+  <title>Trie</title>
 </head>
 
 <body>
